# jami-al-tirmidhi

./: .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  build.mjs  index.cjs  index.d.ts  index.js  index.node.js  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
chapters/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  45.json  (+10 more)
docs/: api.md  cli.md  data-format.md
examples/express/: server.js
examples/flask/: app.py
examples/node-commonjs/: example.js
examples/node-esm/: example.mjs
examples/react/: HadithExample.jsx
python/jami_al_tirmidhi/: __init__.py  cli.py  tirmidhi.py
scripts/: build.mjs
src/: index.cjs  index.node.js
tests/js/: tirmidhi.test.js
tests/python/: test_tirmidhi.py
types/: index.d.ts
